# robot_description_bring-up

./: .gitignore
install/: local_setup.sh  setup.sh
install/my_robot_bringup/lib/my_robot_bringup/: esp32_bridge_node.py
install/my_robot_bringup/local/lib/python3.10/dist-packages/my_robot_bringup/: __init__.py  keyboard_teleop_node.py
install/my_robot_bringup/local/lib/python3.10/dist-packages/my_robot_bringup-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/my_robot_bringup/share/ament_index/resource_index/package_run_dependencies/: my_robot_bringup
install/my_robot_bringup/share/ament_index/resource_index/parent_prefix_path/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_bringup/share/my_robot_bringup/config/: ekf.yaml
install/my_robot_bringup/share/my_robot_bringup/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_robot_bringup/share/my_robot_bringup/launch/: robot_bridge.launch.py  robot_full.launch.py  robot_teleop.launch.py
install/my_robot_bringup/share/my_robot_bringup/launch/past/: localization.launch.py  mapping.launch.py  master.launch.py
install/my_robot_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_description
install/my_robot_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_description
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_description/share/my_robot_description/launch/: view_robot.launch.py
install/my_robot_description/share/my_robot_description/meshes/rosmaster_x3/visual/: Arm_base_link.STL  LB_above_link.STL  LB_below_link.STL  LF_above_link.STL  LF_below_link.STL  LM_link.STL  RB_above_link.STL  RB_below_link.STL  RF_above_link.STL  RF_below_link.STL  RM_link.STL  base_link.STL  camera_link.STL  d435.stl  j1_arm_link.STL  j2_arm_link.STL  j3_arm_link.STL  j4_arm_link.STL  j5_arm_link.STL  j6_arm_link.STL  rplidar_s2.stl
install/my_robot_description/share/my_robot_description/robot_stl/: final2.xml
install/my_robot_description/share/my_robot_description/urdf/: final2.xml
install/my_robot_description/share/my_robot_description/urdf/sensors/: imu.urdf.xacro  lidar.urdf.xacro  rgbd_camera.urdf.xacro
log/: latest_build
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/communication bridge/: README.md  esp32_bridge_node.py  esp32_robot_controller.ino
src/my_robot_bringup/communication bridge/esp32_s3_robot_controller/: esp32_s3_robot_controller.ino
src/my_robot_bringup/config/: ekf.yaml
src/my_robot_bringup/files/: jacobian_analysis.md
src/my_robot_bringup/files/files/: COMPLETE_SETUP_GUIDE.md  robot_full.launch.py  verify_system.sh
src/my_robot_bringup/launch/: robot_bridge.launch.py  robot_full.launch.py  robot_teleop.launch.py
src/my_robot_bringup/launch/past/: localization.launch.py  mapping.launch.py  master.launch.py
src/my_robot_bringup/my_robot_bringup/: esp32_bridge_node.py  keyboard_teleop_node.py
src/my_robot_bringup/my_robot_bringup/esp32_s3_robot_controller/: esp32_s3_robot_controller.ino
src/my_robot_bringup/past_files/: CMakeLists.txt  TELEOP_INTEGRATION.md  encoder_odom_node.cpp  keyboard_teleop.py  keyboard_teleop__.py  package.xml
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: view_robot.launch.py
src/my_robot_description/urdf/: final2.xml
src/my_robot_description/urdf/sensors/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
